--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "multitasker",
   "version": "0.0.1",
-  "description": "A utility for running any command in multiple directories.",
+  "description": "A utility for executing commands in multiple directories.",
   "keywords": [
     "multiple",
     "multitask",
@@ -21,5 +21,14 @@
     "commander": "^2.5.1",
     "moment": "^2.8.4",
     "underscore-node": "^0.1.2"
-  }
+  },
+  "main": "bin/multitasker",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mjswensen/multitasker.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mjswensen/multitasker/issues"
+  },
+  "homepage": "https://github.com/mjswensen/multitasker"
 }
